# poise-fork

./: Cargo.toml
examples/feature_showcase/: main.rs
macros/: Cargo.toml
macros/src/command/: slash.rs
src/builtins/: mod.rs  pretty_help.rs
src/dispatch/: common.rs
src/structs/: command.rs  context.rs  framework_error.rs  slash.rs
